# Z2Pack

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  TODO  clean.sh  manual.txt  pyproject.toml  setup.cfg  setup.py
.ci/: install_script.sh  test_script.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
.github/workflows_source/: ci.yml
.travis-data/: install_script.sh
abinit_input/: BiSe_scf.in  Bi_common.in  HgTe_common.in  HgTe_scf.in
bughunt/weyl/: weyl.py
dev_test/: test.py
doc/: Makefile  config.mk
doc/source/: .gitignore  conf.py  core.rst  developers_guide.rst  devguide_control.rst  devguide_data_result.rst  devguide_io.rst  doc.rst  documentation.rst  em.rst  example_abinit.rst  example_espresso.rst  example_tb.rst  example_vasp.rst  example_weyl.rst  examples.rst  fp.rst  helpers.rst  hm.rst  index.rst  invariant.rst  links.rst  no_link.rst  not_found.rst  other_material.rst  other_systems.rst  plot.rst  reference.rst  surface.rst  systems.rst  tb.rst  tutorial.rst  tutorial_core.rst  tutorial_fp.rst  tutorial_installation.rst  tutorial_invariants.rst  tutorial_new.rst  tutorial_plot.rst  tutorial_surface.rst  tutorial_system.rst  (+2 more)
examples/Bi/: Bi.py  Bi_01_pickle.txt  Bi_nscf.files  Bi_nscf.in  Bi_plot.py  Bi_scf.in  wannier90.win
examples/BiSe/: BiSe_scf_setup.py
examples/Bi_generic/: Bi.py  Bi_01_pickle.txt  Bi_nscf.files  Bi_plot.py
examples/fp/: generic.py
examples/tb/: res_pickle.txt  squarelattice.py  squarelattice_v2.py  test.py
examples/tight_binding/: effective_2D.py  pickle_tb.txt  quasi_2D.py  test.txt
futures/: doubled_haldane.py  multi_haldane.py  tci.py  w90.py
playground/z2sphere/: .gitignore  build_nnkp.py  z2_chiraliy.py
playground/z2sphere_v2/: z2_chiraliy.py
src/: abinit_run.py  bla.py  read_res.py  res_pickle.txt  strings.py  tb_hamilton.py  wannier90_input.py  wcc_convergence.py  z2pack.py
src/abinit/: abinit_input_io.py  abinit_run.py  read_mmn.py  wannier90_input.py
src/first_principles/: first_principles.py  fp_system.py
src/generic/: generic.py
src/python_tools/: debug.py  progressbar.py  py2tex.py
src/tb/: tb_hamilton.py
src/tight_binding/: tb_hamilton.py  tb_vectors.py  tight_binding.py
src/tightbind/: tightbind.py
src/z2pack/: __init__.py  _async_handler.py  _control.py  _logging_format.py  _logging_tools.py  _result.py  _run_utils.py  hm.py  invariant.py  plot.py  shape.py  system.py  tb.py
tests/: .gitignore  abinit.py  checkpoints.py  chern.py  chirality.py  common.py  conftest.py  coverage.sh  coverage.txt  create_tests.py  ctrl_base_tester.py  em_systems.py  em_test.py  espresso.py  fp_phony.py  hm_systems.py  hr_hamilton.py  kpts.py  kpts_abinit.py  line_restart.py  local_config.py  local_config.yml  local_config.yml.example  monkeypatch_data.py  monkeypatch_surface.py  plottest_helpers.py  quietload.py  read_mmn.py  res_pickle.txt  run_line.py  run_surface.py  shapes.py  tb_example.py  tb_explicit.py  tb_hamilton.py  tb_model.py  tb_systems.py  tb_trs.py  tbexample.py  test.py  (+32 more)
tests/fp/: test_abinit.py  test_espresso.py  test_espresso_new.py  test_espresso_symm.py  test_fp_kpoint.py  test_vasp.py
tests/reference_results/: result.json  result.msgpack  result.pickle  result_test_load_reference[False-pickle].pickle  result_test_load_reference[False-serializer0].pickle  result_test_load_reference[False-serializer1].json  result_test_load_reference[False-serializer2].msgpack  result_test_load_reference[True-pickle].pickle  result_test_load_reference[True-serializer0].pickle  result_test_load_reference[True-serializer1].json  result_test_load_reference[True-serializer2].msgpack  result_test_load_reference_legacy_v1[False-json].json  result_test_load_reference_legacy_v1[False-msgpack].msgpack  result_test_load_reference_legacy_v1[False-serializer0].pickle  result_test_load_reference_legacy_v1[False-serializer1].json  result_test_load_reference_legacy_v1[True-json].json  result_test_load_reference_legacy_v1[True-msgpack].msgpack  volume_result_test_load_reference[False-pickle].pickle  volume_result_test_load_reference[False-serializer0].pickle  volume_result_test_load_reference[False-serializer1].json  volume_result_test_load_reference[False-serializer2].msgpack  volume_result_test_load_reference[True-pickle].pickle  volume_result_test_load_reference[True-serializer0].pickle  volume_result_test_load_reference[True-serializer1].json  volume_result_test_load_reference[True-serializer2].msgpack
tests/samples/: chkpt.txt  create_mmn_sample.py  mmn_read.txt  tb_pickle.txt  varw90.mmn
tests/templates/: abinit.py  checkpoints.py  chern.py  chirality.py  em_test.py  espresso.py  fp_phony.py  hr_hamilton.py  kpts.py  kpts_abinit.py  line_restart.py  quietload.py  read_mmn.py  shapes.py  tb_example.py  tb_explicit.py  tb_hamilton.py  tb_model.py  tb_trs.py  tbexample.py  vasp.py  vectors.py  z2.py
tests/test_old/: abinit.py  checkpoints.py  chirality.py  create_tests.py  em_test.py  hermitian.py  hr_hamilton.py  run_line.py  run_surface.py  shapes.py  tb_model.py  test.py  z2.py
utils/: interpolate_yaml_anchors.py
website/: z2pack_logo.xcf  z2pack_online.py
website/static/: ToC.js  style.css
website/templates/: downloads.html  input.html  layout.html  not_implemented.html  result.html  user_guide.html  welcome.html  z2pack_online.html
z2pack/: __init__.py  _async_handler.py  _blessings_fallback.py  _control.py  _core.py  _encoding.py  _helpers.py  _json_encoding.py  _logging_format.py  _logging_tools.py  _result.py  _run_utils.py  _symm_utils.py  _utils.py  _verbose_prt.py  _version.py  core.py  em.py  espresso_symm_utils.py  hm.py  invariant.py  plot.py  reduced_surface.py  shape.py  shapes.py  string_iterators.py  system.py  tb.py  verbose_prt.py
z2pack/_core/: __init__.py  _bases.py  _control_base.py  _convergence_abc.py  _helpers.py  _kwarg_validator.py  _line.py  _line_result.py  _line_utils.py  _manifold_base.py  _result.py  _surface.py  (+7 more)
(+1801 files in other folders)
