[metadata]
name = z2pack
author = Dominik Gresch
author_email = greschd@gmx.ch
version = attr: z2pack.__version__
url = https://z2pack.greschd.ch
description = Automating the computation of topological numbers of band-structures.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    topology
    topological
    invariant
    bandstructure
    chern
    z2
    solid-state
    tight-binding
license = GPL
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Development Status :: 5 - Production/Stable

[options]
python_requires = >=3.6
install_requires =
    numpy
    scipy
    decorator
    blessings
    sortedcontainers
    msgpack-python
    fsc.locker
    fsc.export
    fsc.formatting
    fsc.iohelper
packages = find:

[options.extras_require]
plot =
    matplotlib
tb =
    tbmodels>=1.1.1
dev =
    matplotlib
    tbmodels>=1.1.1
    sphinx
    sphinx-rtd-theme
    pytest~=6.0
    pytest-cov
    pre-commit
    pylint==2.4.4
    ruamel.yaml==0.17.16
